--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <title>eosio bootstrap</title>
+    <link rel="stylesheet" href="/style.css" />
+    <title>Pollen</title>
   </head>
   <body style="margin:0;padding:0;background:#fafafa">
     <div id="root"></div>
