--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
   <meta name="theme-color" content="#000000">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" />
+  <script>
+    WebFont.load({
+      google: {
+        families: ['Press Start 2P']
+      }
+    });
+  </script>
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
   <title>Pollen</title>
