update ui for sign up form

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   </script>
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+  <link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css">
   <title>Pollen</title>
   <script defer src="/bundle.js"></script>
 </head>
