--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,10 @@
       }
     });
   </script>
+  <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
-  <link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css">
+
   <title>Pollen</title>
   <script defer src="/bundle.js"></script>
 </head>
